# GMJJHYDM

./: .gitignore  README.md  app_file_uploader.py  app_qa.py  config_data.py  file_history_store.py  knowledge_base.py  pyproject.toml  rag.py  requirements.txt  vector_stores.py
data/: 国民经济行业分类代码(筛选).xlsx
